lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:26: error: illegal start of simple expression
  }
  ^